Made Minor Color Change
I made a minor color change to my contact page so that
my links would all be the same color.

--- a/contact.html
+++ b/contact.html
@@ -1,66 +1,120 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Contact Info</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+            integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            media="screen"
+            href="bootswatch.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            media="screen"
+            href="style.css"
+        />
+    </head>
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Contact Info</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-        crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="bootswatch.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-</head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-info">
+            <h3 class="navbar-brand">
+                <i class="fas fa-address-book"></i> Contact Info
+            </h3>
+            <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-info">
-        <h3 class="navbar-brand">
-            <i class="fas fa-address-book"></i> Contact Info</h3>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <h5>
-                <a class="nav-link text-light" href="index.html">Biography</a>
-            </h5>
-            <h5>
-                <a class="nav-link text-light" href="projects.html">Projects</a>
-            </h5>
-            <h5>
-                <a class="nav-link text-light" href="resume.html">Resume</a>
-            </h5>
-            <h5>
-                <a class="nav-link text-light" href="contact.html">Contact Info</a>
-            </h5>
-            <h5>
-                <a class="nav-link text-light" href="personal_inquiries.html">Personal Inquiries</a>
-            </h5>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <h5>
+                    <a class="nav-link text-light" href="index.html"
+                        >Biography</a
+                    >
+                </h5>
+                <h5>
+                    <a class="nav-link text-light" href="projects.html"
+                        >Projects</a
+                    >
+                </h5>
+                <h5>
+                    <a class="nav-link text-light" href="resume.html">Resume</a>
+                </h5>
+                <h5>
+                    <a class="nav-link text-light" href="contact.html"
+                        >Contact Info</a
+                    >
+                </h5>
+                <h5>
+                    <a
+                        class="nav-link text-light"
+                        href="personal_inquiries.html"
+                        >Personal Inquiries</a
+                    >
+                </h5>
+            </div>
+        </nav>
+        <div class="card mx-3 mt-3">
+            <div class="card-body">
+                <h3 class="card-title text-light">Contact Information:</h3>
+                <h5 class="text-light">
+                    Github:
+                    <p>
+                        <a
+                            href="https://github.com/ColeAnderson7278"
+                            class="text-info"
+                            >ColeAnderson7278</a
+                        >
+                    </p>
+                </h5>
+                <h5 class="text-light">
+                    Base Camp Email:
+                    <a
+                        href="mailto:canderson@basecampcodingacademy.org"
+                        class="text-info"
+                        >canderson@basecampcodingacademy.org</a
+                    >
+                </h5>
+                <h5 class="text-light">
+                    Personal Email:
+                    <a
+                        href="mailto:coleanderson7278@gmail.com"
+                        class="text-info"
+                        >coleanderson7278@gmail.com</a
+                    >
+                </h5>
+            </div>
         </div>
-    </nav>
-    <div class="card mx-3 mt-3">
-        <div class="card-body">
-            <h3 class="card-title text-light">Contact Information:</h3>
-            <h5 class="text-light">Github:
-                <p>
-                    <a href="https://github.com/ColeAnderson7278" class="text-info">ColeAnderson7278</a>
-                </p>
-            </h5>
-            <h5 class="text-light">Base Camp Email:
-                <a href="mailto:canderson@basecampcodingacademy.org">canderson@basecampcodingacademy.org</a>
-            </h5>
-            <h5 class="text-light">Personal Email:
-                <a href="mailto:coleanderson7278@gmail.com">coleanderson7278@gmail.com</a>
-            </h5>
-        </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-</body>
-
+        <script
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
