Added Resume Contacts
I added the Google Docs link to my resume to my
contacts page. I also got rid of the resume page
due to lack of use.

--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,6 @@
                     >
                 </h5>
                 <h5>
-                    <a class="nav-link text-light" href="resume.html">Resume</a>
-                </h5>
-                <h5>
                     <a class="nav-link text-light" href="contact.html"
                         >Contact Info</a
                     >
@@ -97,6 +94,14 @@
                         href="mailto:coleanderson7278@gmail.com"
                         class="text-info"
                         >coleanderson7278@gmail.com</a
+                    >
+                </h5>
+                <h5 class="text-light">
+                    Resume:
+                    <a
+                        href="https://docs.google.com/document/d/1mxdig2Etmo5ya0ejQX8jwcoYetLXhQFjTiO2JpZ15OY/edit?usp=sharing"
+                        class="text-info"
+                        >Google Document</a
                     >
                 </h5>
             </div>
