--- a/personal_inquiries.html
+++ b/personal_inquiries.html
@@ -1,63 +1,110 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Personal Inquiries</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+            integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            media="screen"
+            href="bootswatch.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            media="screen"
+            href="style.css"
+        />
+    </head>
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Personal Inquiries</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-        crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="bootswatch.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-</head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-info">
+            <h3 class="navbar-brand">
+                <i class="fas fa-book-reader"></i> Personal Inquiries
+            </h3>
+            <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-info">
-        <h3 class="navbar-brand">
-            <i class="fas fa-book-reader"></i> Personal Inquiries</h3>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <h5>
-                <a class="nav-link text-light" href="index.html">Biography</a>
-            </h5>
-            <h5>
-                <a class="nav-link text-light" href="projects.html">Projects</a>
-            </h5>
-            <h5>
-                <a class="nav-link text-light" href="resume.html">Resume</a>
-            </h5>
-            <h5>
-                <a class="nav-link text-light" href="contact.html">Contact Info</a>
-            </h5>
-            <h5>
-                <a class="nav-link text-light" href="personal_inquiries.html">Personal Inquiries</a>
-            </h5>
-        </div>
-    </nav>
-    <div class="container col-lg-6">
-        <div class="card text-light px-3 mt-3 mb-3">
-            <div class="card-body">
-                <h3>Object-Oriented Design</h3>
-                <h5 class="text-info">I got into this type of design around two months into the program, when my instructor gave me
-                    <i>Practical Object-Oriented Design In Ruby</i> to read. This book doesn't show me new tools to use; however,
-                    it gives me a new way to view, think, and, above all, design my code. After reading this book, I began
-                    working on a personal side project called
-                    <a href="https://github.com/ColeAnderson7278/Practicing_OOD" class="text-info">Practicing OOD</a>. For this project, I reread this book, which is written for Ruby, and then rewrote
-                    the coding example in Python. I also explain my reasons for doing so in my commit statements.</h5>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <h5>
+                    <a class="nav-link text-light" href="index.html"
+                        >Biography</a
+                    >
+                </h5>
+                <h5>
+                    <a class="nav-link text-light" href="projects.html"
+                        >Projects</a
+                    >
+                </h5>
+                <h5>
+                    <a class="nav-link text-light" href="contact.html"
+                        >Contact Info</a
+                    >
+                </h5>
+                <h5>
+                    <a
+                        class="nav-link text-light"
+                        href="personal_inquiries.html"
+                        >Personal Inquiries</a
+                    >
+                </h5>
+            </div>
+        </nav>
+        <div class="container col-lg-6">
+            <div class="card text-light px-3 mt-3 mb-3">
+                <div class="card-body">
+                    <h3>Object-Oriented Design</h3>
+                    <h5 class="text-info">
+                        I got into this type of design around two months into
+                        the program, when my instructor gave me
+                        <i>Practical Object-Oriented Design In Ruby</i> to read.
+                        This book doesn't show me new tools to use; however, it
+                        gives me a new way to view, think, and, above all,
+                        design my code. After reading this book, I began working
+                        on a personal side project called
+                        <a
+                            href="https://github.com/ColeAnderson7278/Practicing_OOD"
+                            class="text-info"
+                            >Practicing OOD</a
+                        >. For this project, I reread this book, which is
+                        written for Ruby, and then rewrote the coding example in
+                        Python. I also explain my reasons for doing so in my
+                        commit statements.
+                    </h5>
+                </div>
             </div>
         </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-</body>
-
+        <script
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
