--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                     </h4>
                     <h5 class="card-text text-info">
                         <ul>
+                            <li>Java</li>
                             <li>Python</li>
                             <li>HTML</li>
                             <li>CSS</li>
