--- a/projects.html
+++ b/projects.html
@@ -263,44 +263,47 @@
             </div>
             <div class="card text-light">
                 <div class="card-body">
-                    <h3 class="project_title">Fake Base Camp Page & Log-In</h3>
+                    <h3 class="project_title">Loan Calculator</h3>
                     <div>
                         <h6 class="d-flex pr-2">
                             Coded With:
-                            <p class="text-info pl-2">HTML & CSS</p>
+                            <p class="text-info pl-2">JS, HTML & CSS</p>
                         </h6>
                         <h6 class="d-flex pr-2">
                             Programming Age:
-                            <p class="text-info pl-2">3 Months</p>
+                            <p class="text-info pl-2">8 Months</p>
                         </h6>
                         <div class="d-flex">
                             <h6>Links:</h6>
                             <h6 class="pl-2">
                                 <a
                                     class="text-info"
-                                    href="https://github.com/ColeAnderson7278/Fake_BaseCampPage"
-                                    >Fake B.C. Page</a
+                                    href="https://coleanderson7278.github.io/LoanCalculator/"
+                                    >Website Link</a
                                 >
                             </h6>
                             <p>,</p>
                             <h6 class="pl-2">
                                 <a
                                     class="text-info"
-                                    href="https://github.com/ColeAnderson7278/Fake_BaseCampLogin"
-                                    >Fake B.C. Log-In</a
+                                    href="https://github.com/ColeAnderson7278/LoanCalculator"
+                                    >Github Link</a
                                 >
                             </h6>
                         </div>
                         <div class="description_container">
                             <h6>Description:</h6>
                             <h6 class="text-info">
-                                These are two programs that I wrote after we
-                                first began learning HTML and CSS. These two
-                                pages have flaws, but they taught me a lot about
-                                what I could do with my new set of tools and
-                                what not to do with them. Even in their
-                                simplicity, these pages help me establish a good
-                                foothold and idea of front-end design.
+                                This is an application I worked on during my
+                                independent study time. It is designed to help a
+                                user calculate monthly payments on a loan given
+                                the amount borrowed, the time allowed to pay it
+                                off, and the interest rate on the loan. The
+                                application is very simple in it's design yet
+                                very effective in what it was made to
+                                accomplish. The simple design also allows for a
+                                much nicer user experience, and it helps to make
+                                sure the program works on all types of media.
                             </h6>
                         </div>
                     </div>
