Updated Profile Picture

--- a/index.html
+++ b/index.html
@@ -69,10 +69,7 @@
         </nav>
         <div class="container col-lg-6">
             <div class="card mt-3 mb-3">
-                <img
-                    id="portfolio_picture"
-                    src="images/portfolio_picture.jpg"
-                />
+                <img id="portfolio_picture" src="images/portfolio_pic.jpg" />
                 <div class="card-body">
                     <h4 class="card-title text-light">About Me:</h4>
                     <h5 class="card-text text-info">
