Updated Skills and added transitons

--- a/contact.html
+++ b/contact.html
@@ -67,43 +67,45 @@
                 </h5>
             </div>
         </nav>
-        <div class="card mx-3 mt-3">
-            <div class="card-body">
-                <h3 class="card-title text-light">Contact Information:</h3>
-                <h5 class="text-light">
-                    Github:
-                    <p>
+        <div class="container">
+            <div class="card mx-3 mt-3">
+                <div class="card-body">
+                    <h3 class="card-title text-light">Contact Information:</h3>
+                    <h5 class="text-light">
+                        Github:
+                        <p>
+                            <a
+                                href="https://github.com/ColeAnderson7278"
+                                class="text-info"
+                                >ColeAnderson7278</a
+                            >
+                        </p>
+                    </h5>
+                    <h5 class="text-light">
+                        Base Camp Email:
                         <a
-                            href="https://github.com/ColeAnderson7278"
+                            href="mailto:canderson@basecampcodingacademy.org"
                             class="text-info"
-                            >ColeAnderson7278</a
+                            >canderson@basecampcodingacademy.org</a
                         >
-                    </p>
-                </h5>
-                <h5 class="text-light">
-                    Base Camp Email:
-                    <a
-                        href="mailto:canderson@basecampcodingacademy.org"
-                        class="text-info"
-                        >canderson@basecampcodingacademy.org</a
-                    >
-                </h5>
-                <h5 class="text-light">
-                    Personal Email:
-                    <a
-                        href="mailto:coleanderson7278@gmail.com"
-                        class="text-info"
-                        >coleanderson7278@gmail.com</a
-                    >
-                </h5>
-                <h5 class="text-light">
-                    Resume:
-                    <a
-                        href="https://docs.google.com/document/d/1riPupp24BeqLWL9_zMwt8B9FbGfxLVPh7TgXirCEvpM/edit?usp=sharing"
-                        class="text-info"
-                        >Google Document</a
-                    >
-                </h5>
+                    </h5>
+                    <h5 class="text-light">
+                        Personal Email:
+                        <a
+                            href="mailto:coleanderson7278@gmail.com"
+                            class="text-info"
+                            >coleanderson7278@gmail.com</a
+                        >
+                    </h5>
+                    <h5 class="text-light">
+                        Resume:
+                        <a
+                            href="https://docs.google.com/document/d/1riPupp24BeqLWL9_zMwt8B9FbGfxLVPh7TgXirCEvpM/edit?usp=sharing"
+                            class="text-info"
+                            >Google Document</a
+                        >
+                    </h5>
+                </div>
             </div>
         </div>
         <script
