--- a/index.html
+++ b/index.html
@@ -88,15 +88,14 @@
             <div class="card mb-3">
                 <div class="card-body">
                     <h4 class="card-title text-light">
-                        Languages I've Learned:
+                        Skills:
                     </h4>
                     <h5 class="card-text text-info">
                         <ul>
-                            <li>Java</li>
-                            <li>Python</li>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>JavaScript</li>
+                            <li>Java / Spring</li>
+                            <li>Python / Django</li>
+                            <li>Front End Development</li>
+                            <li>Object Oriented Design</li>
                         </ul>
                     </h5>
                 </div>
