Updated Projects design and content
I removed two projects and I also made sure
to format these projects in a more pleasing
format.

--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
                 </h5>
             </div>
         </nav>
-        <main>
+        <div class="container">
             <div class="card text-light">
                 <div class="card-body">
                     <h3 class="project_title">RainFall</h3>
@@ -215,54 +215,6 @@
             </div>
             <div class="card text-light">
                 <div class="card-body">
-                    <h3 class="project_title">Gladiators & OOP Gladiators</h3>
-                    <div>
-                        <h6 class="d-flex pr-2">
-                            Coded With:
-                            <p class="text-info pl-2">Python</p>
-                        </h6>
-                        <h6 class="d-flex pr-2">
-                            Programming Age:
-                            <p class="text-info pl-2">1 Month</p>
-                        </h6>
-                        <div class="d-flex">
-                            <h6>Links:</h6>
-                            <h6 class="pl-2">
-                                <a
-                                    class="text-info"
-                                    href="https://github.com/ColeAnderson7278/Gladiators"
-                                    >Gladiators</a
-                                >
-                            </h6>
-                            <h6>,</h6>
-                            <h6 class="pl-2">
-                                <a
-                                    class="text-info"
-                                    href="https://github.com/ColeAnderson7278/OOP-Gladiators"
-                                    >OOP Gladiators</a
-                                >
-                            </h6>
-                        </div>
-                        <div class="description_container">
-                            <h6>Description:</h6>
-                            <h6 class="text-info">
-                                These two programs are following the same goals
-                                and using the same language; however, I used two
-                                different coding styles to achieve said goals.
-                                In Gladiators I used standard python to make a
-                                turn based fighting game. I did the same in OOP
-                                Gladiators, but in that program I used a class
-                                based system to better organize my code. I put
-                                these two together because I believe that help
-                                to show how I updated, and expanded, a simple
-                                program into something more efficient.
-                            </h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card text-light">
-                <div class="card-body">
                     <h3 class="project_title">Loan Calculator</h3>
                     <div>
                         <h6 class="d-flex pr-2">
@@ -309,45 +261,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card text-light">
-                <div class="card-body">
-                    <h3 class="project_title">Rental Agency</h3>
-                    <div>
-                        <h6 class="d-flex pr-2">
-                            Coded With:
-                            <p class="text-info pl-2">Python</p>
-                        </h6>
-                        <h6 class="d-flex pr-2">
-                            Programming Age:
-                            <p class="text-info pl-2">2 Months</p>
-                        </h6>
-                        <div class="d-flex">
-                            <h6>Link:</h6>
-                            <h6 class="pl-2">
-                                <a
-                                    class="text-info"
-                                    href="https://github.com/ColeAnderson7278/Rental_Agency_ColeAnderson"
-                                    >Rental Agency</a
-                                >
-                            </h6>
-                        </div>
-                        <div class="description_container">
-                            <h6>Description:</h6>
-                            <h6 class="text-info">
-                                This was our first final project, which we coded
-                                in Python. This project really forced me to use
-                                all of my knowledge of Python in one, single
-                                application. It also really helped me see my
-                                strengths and my weaknesses, but it allowed me
-                                to see that I could easily build off of both to
-                                make sure I was much more well rounded by the
-                                end.
-                            </h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
+        </div>
         <script
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
