Updated formating and skills list

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 </h5>
             </div>
         </nav>
-        <div class="container col-lg-6">
-            <div class="card mt-3 mb-3">
+        <div class="container col-lg-8">
+            <div class="card">
                 <img id="portfolio_picture" src="images/portfolio_pic.jpg" />
                 <div class="card-body">
                     <h4 class="card-title text-light">About Me:</h4>
@@ -85,10 +85,10 @@
                     </h5>
                 </div>
             </div>
-            <div class="card mb-3">
+            <div class="card pt-2 mb-3">
                 <div class="card-body">
                     <h4 class="card-title text-light">
-                        Skills:
+                        Skills & Knowledge:
                     </h4>
                     <h5 class="card-text text-info">
                         <ul>
@@ -96,6 +96,11 @@
                             <li>Python / Django</li>
                             <li>Front End Development</li>
                             <li>Object Oriented Design</li>
+                            <li>Pair-Programming</li>
+                            <li>Github</li>
+                            <li>Unit Testing</li>
+                            <li>SQL</li>
+                            <li>Ubuntu</li>
                         </ul>
                     </h5>
                 </div>
