Updated the transition

--- a/projects.html
+++ b/projects.html
@@ -213,7 +213,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card text-light">
+            <div class="card text-light mb-3">
                 <div class="card-body">
                     <h3 class="project_title">Loan Calculator</h3>
                     <div>
